virt01/manual/ai/local-ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localai-ingress
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: localai.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: localai-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - localai.k3s.nf.lab
    secretName: localai-tls
